--- a/ExtendReports/reports/index.html
+++ b/ExtendReports/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 2, 2022 05:52:18 pm</span></a>
+<a href="#"><span class="badge badge-primary">Feb 10, 2022 10:46:02 am</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Demo</p>
             <p class="text-sm">
-              <span>5:52:19 pm</span> / <span>00:00:08:716</span>
+              <span>10:46:03 am</span> / <span>00:00:06:825</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -90,21 +90,25 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Demo</h5>
-<span class='badge badge-success'>02.02.2022 5:52:19 pm</span>
-<span class='badge badge-danger'>02.02.2022 5:52:27 pm</span>
-<span class='badge badge-default'>00:00:08:716</span>
+<span class='badge badge-success'>02.10.2022 10:46:03 am</span>
+<span class='badge badge-danger'>02.10.2022 10:46:09 am</span>
+<span class='badge badge-default'>00:00:06:825</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
+</div>    <div class="row mb-3"><div class="col-md-3">
+        <a href="data:image/png;base64,C:\Users\yathi\git\ExtendReport\ExtendReports\reports\snap.png" data-featherlight="image"><span class="badge badge-gradient-primary">base64 img</span></a>
+        
+    </div></div>
+<div class="detail-body mt-4">
 <table class="table table-sm">
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>5:52:27 pm</td>
+        <td>10:46:09 am</td>
         <td>
           Failed
         </td>
@@ -128,13 +132,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 2, 2022 05:52:18 pm</h3>
+<h3>Feb 10, 2022 10:46:02 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 2, 2022 05:52:27 pm</h3>
+<h3>Feb 10, 2022 10:46:09 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +208,7 @@
 </div></div>
 <script>
 var timeline = {
-"Demo":8.716
+"Demo":6.825
 };
 </script>
 <div class="row">
